# BAJIU-Lite

./: README.md
examples/CRiscV/: README.md
examples/CRiscV/hw/: CRiscV.peri.xml  CRiscV.sdc  CRiscV.v  CRiscV.xml  top.v
examples/CRiscV/hw/outflow/: CRiscV.bit  CRiscV.hex
examples/CRiscV/sw/: CMakeLists.txt  i2c.c  platform.c  platform.h  test.c
examples/CRiscV/sw/bsp/: criscv.h  crt.S  linker.ld
examples/CRiscV/sw/driver/: gpio.h  i2c.h  io.h  spi.h  timer.h  uart.h
examples/CRiscV/sw/openocd/: debug.cfg  jtag.cfg
examples/hello_led/: hello_led.peri.xml  hello_led.xml  top.v
examples/hello_uart/: HelloUart.v  hello_uart.peri.xml  hello_uart.xml  top.v
